# center-randomize

./: .coveragerc  .editorconfig  .gitignore  .pre-commit-config.yaml  CONTRIBUTION.md  Dockerfile  LICENSE  README.md  app.py  calculate_route_distance.py  file-server.py  pyproject.toml  pytest.ini  requirements.txt  ruff.toml  school_center.py  school_center_using_route_distance.py  settings.py  test_requirements.txt  test_results.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.yaml  custom-issue.yaml  feature-request.yaml  issue-template.md
.github/workflows/: code_coverage.yml  code_security.yml  code_styling.yml  format.yml
sample_data/: centers_grade12_2081.tsv  output.tsv  prefs.tsv  schools_grade12_2081.tsv
server/: README.md  app.py  requirements.txt
server/templates/: index.html
src/: school_center.py
test/: test_results.py
test/utils/: custom_tsv_parser.py
tests/: test_results.py  test_school_center.py
utils/: check_duplicate.py  constants.py  custom_file_handler.py  custom_logger.py  file_utils.py  pretty.py  utils.py
