[project]
name = "center-randomize"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Manisha Bhandari", email = "manishabhandari841@gmail.com" }
]
dependencies = [
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest==8.0.2",
    "pytest-clarity==1.0.1",
    "pytest-sugar==1.0.0",
    "pytest-cov==5.0.0",
    "ruff==0.4.1",
    "pre-commit==3.6.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/center_randomize"]
